fix: resolve search issue on tablets and mobiles and adjust UI

--- a/frontend/src/components/styles/UWayDashboard.css
+++ b/frontend/src/components/styles/UWayDashboard.css
@@ -10,7 +10,7 @@ html, body, #root {
 .dashboard-container {
   display: flex;
   height: 100vh;
-  overflow: hidden;
+  overflow: visible;
   font-family: system-ui, -apple-system, sans-serif;
 }
 
@@ -125,9 +125,9 @@ hr {
 
 /* ---------- Barra de búsqueda ---------- */
 .search-bar {
-  position: absolute;
+  position: relative;
   top: 20px;
-  left: 50%;
+  left: 55%;
   transform: translateX(-50%);
   display: flex;
   width: 360px;      
@@ -135,6 +135,19 @@ hr {
   padding: 0.25rem;
   border-radius: 24px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  z-index: 1000;
+}
+
+.search-dropdown {
+  position: absolute;
+  top: calc(100% + 8px);  /* justo debajo */
+  left: 0;
+  width: 100%;
+  max-height: 240px;
+  overflow-y: auto;
+  background: #fff;
+  border-radius: .5rem;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
   z-index: 1000;
 }
 
@@ -258,17 +271,6 @@ hr {
 }
 
 /* ---------- Búsqueda desplegable ---------- */
-.search-results-container {
-  position: absolute;
-  top: 70px;
-  left: 280px;
-  background: white;
-  border-radius: 0.5rem;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  max-width: 400px;
-  width: calc(100% - 300px);
-  z-index: 1000;
-}
 
 .search-results-list {
   list-style: none;
@@ -332,6 +334,42 @@ hr {
 
   .search-bar {
     width: 250px;
+    left: 5%;
+    transform: none;
+    align-self: center;
+  }
+
+  .points-list {
+    top: auto;
+    bottom: 80px;
+  }
+
+}
+
+/* Mostrar siempre en tabletas */
+@media (max-width: 1024px)  {
+.sidebar-dashboard {
+    transform: translateX(-100%);
+  }
+  .sidebar-dashboard.open {
+    transform: translateX(0);
+  }
+
+  .hamburger-button {
+    position: fixed;
+    top: 20px;
+    left: 1rem;
+    background: #7e22ce;
+    border: none;
+    color: white;
+    z-index: 1000;
+  }
+
+  .search-bar {
+    width: 250px;
+    left: 5%;
+    transform: none;
+    align-self: center;
   }
 
   .points-list {
@@ -341,7 +379,7 @@ hr {
 }
 
 /* Mostrar siempre en desktop */
-@media (min-width: 769px) {
+@media (min-width: 1024px){
   .sidebar-dashboard {
     transform: translateX(0);
   }
